add basic dashboard layout

--- a/frontend/blogger-ai-frontend/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/frontend/blogger-ai-frontend/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<dashboard-appbar></dashboard-appbar>
+<div class="d-flex">
+  <dashboard-navbar></dashboard-navbar>
+  <div class="flex-grow-1">
+    <router-outlet></router-outlet>
+  </div>
+</div>
